Add all DefectService methods